--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -2,7 +2,7 @@
   <button mat-icon-button>
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Capgemini Inventory System</span>
+  <span>Inventory System</span>
   <span class="spacer"></span>
   <button mat-button>Dashboard</button>
   <button mat-button>Orders</button>
